# AI-game-builder-agent

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  agentic_game_builder_mvp_prd.md  project_update.md  pyproject.toml  tasks.md
agentic_game_builder/: __init__.py  analysis.py  clarification.py  cli.py  framework_selector.py  generator.py  llm.py  models.py  output.py  planner.py  validator.py
tests/: test_pipeline.py
